- [Feature] Support to set storage class (Google Storage)
- [Feature] Support for Intelligent-Tiering storage class (S3) (#11031)
- [Feature] Support for Glacier Deep Archive storage class (S3) (#10681)
- [Feature] Allow selection of Glacier storage class as default for uploads (S3) (#10681)
- [Feature] Support for shared files (OneDrive)
- [Feature] Support for af-south-1 (Cape Town) region (S3)
- [Bugfix] Missing URLs to copy of CDN distributions (S3, Rackspace)
- [Bugfix] Reduced memory usage (macOS)
- [Bugfix] Failure uploading files to vault in version 7 format (Cryptomator) (#11020)

7.3.0
- [Feature] Support for vault format version 7 (Cryptomator) (#10825)
- [Feature] Labels for bookmarks (macOS) (#9719)
- [Feature] Group bookmarks by labels in menu (macOS)
- [Feature] Support TLS 1.3 (#10962)
- [Feature] Support for ap-east-1 (Hong Kong) region (S3)
- [Bugfix] Download fails for files with whitespace in name (Google Storage) (#10931)
- [Bugfix] Unable to access documents in Shared with me (Google Drive)
- [Bugfix] Read timeout after copying large file (OpenStack Swift)
- [Bugfix] Repeated prompt for authorization code (hubiC)
- [Bugfix] Immediate retry for failure with cached upload channel (Backblaze B2)
- [Bugfix] Set timestamp with X-OC-Mtime header (Nextcloud, ownCloud)
- [Bugfix] Copy files to different bucket (Backblaze B2) (#10924)
- [Bugfix] Allow downloading files marked as abusive (Google Drive) (#10377)
- [Bugfix] Apply public read permissions to files selected to share (Google Drive)

7.2.6
- [Feature] Importer for bookmarks from Transmit 5 (macOS)
- [Feature] Importer for bookmarks from Cloudmounter (macOS)
- [Bugfix] Copy files to different bucket (Backblaze B2) (#10924)

7.2.5
- [Bugfix] Error downloading files from Microsoft SharePoint (SharePoint Server 2016)

7.2.4
- [Bugfix] Certificate trust validation error (Google Drive, macOS)

7.2.3
- [Bugfix] Cannot open link to documents in Google Docs (Google Drive)

7.2.2