@@ -9,9 +9,11 @@ https://cyberduck.io/
 - [Feature] Allow selection of Glacier storage class as default for uploads (S3) (#10681)
 - [Feature] Support for shared files (OneDrive)
 - [Feature] Support for af-south-1 (Cape Town) region (S3)
+- [Feature] Support to access shared files (OneDrive)
 - [Bugfix] Missing URLs to copy of CDN distributions (S3, Rackspace)
 - [Bugfix] Reduced memory usage (macOS)
 - [Bugfix] Failure uploading files to vault in version 7 format (Cryptomator) (#11020)
+- [Bugfix] Interoperability with Minio (S3) (#11018)
 
 7.3.0
 - [Feature] Support for vault format version 7 (Cryptomator) (#10825)
